@@ -334,6 +334,7 @@ $wgAutoloadLocalClasses = array(
 	'ApiBase' => 'includes/api/ApiBase.php',
 	'ApiBlock' => 'includes/api/ApiBlock.php',
 	'ApiComparePages' => 'includes/api/ApiComparePages.php',
+	'ApiCreateAccount' => 'includes/api/ApiCreateAccount.php',
 	'ApiDelete' => 'includes/api/ApiDelete.php',
 	'ApiDisabled' => 'includes/api/ApiDisabled.php',
 	'ApiEditPage' => 'includes/api/ApiEditPage.php',
